generalStyle.css
.center {
    text-align: center;
}

.TopSection {
    display: inline-block;
    padding: 1% 1%;
}

.twocolumns {
    display: flex;
    text-align: justify;
}

.col1 {
    width: 40%;
    background-color: white;
    flex: 1;
    border-right: 3px solid gray;
}

.col2 {
    width: 60%;
    background-color: white;
    flex: 2;
    text-align: center;
    padding-top: 5%;
    margin: auto;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
/* Modal Content/Box */
.modal-content {
    background-color: #fefefe;
    margin: 15% auto; /* 15% from the top and centered */
    padding: 20px;
    border: 1px solid #888;
    width: 80%; /* Could be more or less, depending on screen size */
  }
  
/* The Close Button */
.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

  /* Tooltip container */
.calculatetooltip {
    position: relative;
    display: inline-block;
  }
  
/* Tooltip text */
.calculatetooltip .calculatetooltiptext {
    visibility: hidden;
    width: 200px;
    background-color: #555;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
  
    /* Position the tooltip text */
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -60px;
  
    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
  }
  
/* Tooltip arrow */
.calculatetooltip .calculatetooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
  }
  
/* Show the tooltip text when you mouse over the tooltip container */
.calculatetooltip:hover .calculatetooltiptext {
    visibility: visible;
    opacity: 1;
  }

.scrolling-wrapper {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    width: 75%;
    margin: auto;
  
    .card {
      display: inline-block;
    }
  }

.toggle-container {
    position: relative;
    display: inline-block;
    width: 50px; /* adjust width as needed */
    height: 170px; /* adjust height as needed */
}

.toggle {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    border-radius: 25px; /* make it round */
    cursor: pointer;
    transition: background-color 0.3s;
}

.toggle:before {
    content: "";
    position: absolute;
    width: 40px; /* width of the toggle */
    height: 40px; /* height of the toggle */
    background-color: white;
    border-radius: 50%; /* make it round */
    top: 5px; /* adjust top position */
    left: 5px; /* adjust left position */
    transition: transform 0.3s;
}

input[type="checkbox"] {
    display: none;
}

input[type="checkbox"]:checked + .toggle {
    background-color: #00274c; /* change background color when checked */
}

input[type="checkbox"]:checked + .toggle:before {
    transform: translateY(300%); /* move toggle down when checked */
}

.backbutton {
    cursor: pointer;
}

.inputRow {
    display: flex;
    text-align: center;
    width: 100%;
    margin: auto;
    padding-top: 5px;
}

/* Bootstrap gives tables a serious issue so be very careful before using boot with this table specifically */

.possibleInputTable {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

table.possibleInputTable, .possibleInputTable th, .possibleInputTable td {
    border: 1px solid black;
    border-collapse: collapse;
    text-align: center;
}

.possibleInputTable th, .possibleInputTable td {
    padding: 10px;
}

/* Header */
.possibleInputTable th {
    background-color: #888;
}

/* Stripes */
.possibleInputTable tr:nth-child(even) {
    background-color: #f2f2f2;
}

.scrollATable {
    width: 80%;
    height: 500px;
    margin-left: auto;
    margin-right: auto;
    overflow-y: auto;
}

/* Style The Dropdown Button */
.dropbtn {
    background-color: rgb(0, 81, 255);
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
  }
  
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
  }
  
  /* Change color of dropdown links on hover */
  .dropdown-content a:hover {background-color: #f1f1f1}
  
  /* Show the dropdown menu on hover */
  .dropdown:hover .dropdown-content {
    display: block;
  }
  
  /* Change the background color of the dropdown button when the dropdown content is shown */
  .dropdown:hover .dropbtn {
    background-color: rgb(0, 81, 255);
  }

